Fixed header not visible after sliderToProject

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -8,7 +8,7 @@
     opacity: 1;
 }
 
-.header.home {
+.header.home-loading {
     opacity: 0;
 }
 
